--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <nav>
         <ul>
           <li><a class="btn" href="#AProposDeMoi">ma personne</a></li>
-          <li><a class="btn" href="#MonParcours">mon parcours</a></li>
+          <li><a class="btn" href="#MonParcours">mes skills</a></li>
           <li><a class="btn" href="#PortFolio">mon portfolio</a></li>
           <li><a class="btn" href="#meContact">me contacter</a></li>
         </ul>
